# fire_detection_iot

./: .gitignore  README.md  pyproject.toml
sketch_apr30a/: sketch_apr30a.ino
src/fire_detection_iot/: main.py
